--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="http://cdn.hydraulisc.net/2sJdLtY5F04u.svg" type="image/png">
     <link rel="icon" type="image/x-icon" href="http://cdn.hydraulisc.net/2sJdLtY5F04u.svg">
-    <title>The Hydraulisc Blog</title>
+    <title>Hydraulisc Devlopers Digest</title>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script>
