CHORE: Better Nav & Styles + NoScript tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body class="background-primary primary-text">
     <header id="stickyHeader" class="stickyHeader">
-        <button onclick="location.href='https://github.com/Hydraulisc/blog-site'" style="border: none; border-radius: 10px 0px 0px 10px; position: absolute; right: 0; top: 0; background-color: #5667c7; cursor: pointer; z-index: 1010;"><span style="padding: 12px;">View on GitHub</span></button>
+        <a href="https://github.com/Hydraulisc/blog-site" style="border: none; border-radius: 10px 0px 0px 10px; position: absolute; right: 0; top: 0; background-color: #5667c7; cursor: pointer; z-index: 1010; color: #d7d9e0; text-decoration: none;">
+            <span style="padding: 12px; font-size: smaller;">View on GitHub</span>
+        </a>
         <div style="text-align: center;">
             <div id="title"></div>
         </div>
@@ -24,5 +26,6 @@
     <div id="entries"></div>
     <br>
     <div id="buttons"></div>
+    <noscript>If you are reading this, please enable JavaScript. This site works 100% on JavaScript. <a href="https://github.com/Hydraulisc/blog-site">Source Code</a> available for review.</noscript>
 </body>
 </html>
