Patch Social Image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="http://cdn.hydraulisc.net/2sJdLtY5F04u.svg" type="image/png">
+    <link rel="icon" href="https://about.hydraulisc.net/assets/icons/footer-badge.png" type="image/png">
     <link rel="icon" type="image/x-icon" href="http://cdn.hydraulisc.net/2sJdLtY5F04u.svg">
     <title>Hydraulisc Devlopers Digest</title>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
@@ -27,5 +27,6 @@
     <br>
     <div id="buttons"></div>
     <noscript>If you are reading this, please enable JavaScript. This site works 100% on JavaScript. <a href="https://github.com/Hydraulisc/blog-site">Source Code</a> available for review.</noscript>
+    <img src="https://about.hydraulisc.net/assets/icons/footer-badge.png" alt="Powered By Badge" style="max-width: 170px; max-width: 23px;">
 </body>
 </html>
