Finally, Open Graph Embeds

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://about.hydraulisc.net/assets/icons/footer-badge.png" type="image/png">
-    <link rel="icon" type="image/x-icon" href="http://cdn.hydraulisc.net/2sJdLtY5F04u.svg">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/144374735" type="image/png">
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/144374735">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/144374735">
+    <meta property="og:site_name" content="Developers Digest - Hydraulisc">
+    <meta property="og:description" content="Updates from Hydraulisc Developers Digest">
+    <meta property="og:title" content="Blog | Hydraulisc">
     <title>Hydraulisc Devlopers Digest</title>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
@@ -26,7 +30,7 @@
     <div id="entries"></div>
     <br>
     <div id="buttons"></div>
-    <noscript>If you are reading this, please enable JavaScript. This site works 100% on JavaScript. <a href="https://github.com/Hydraulisc/blog-site">Source Code</a> available for review.</noscript>
-    <img src="https://about.hydraulisc.net/assets/icons/footer-badge.png" alt="Powered By Badge" style="max-width: 170px; max-width: 23px;">
+    <noscript>If you are reading this, please enable JavaScript. This site works 100% on JavaScript. <a href="https://github.com/Hydraulisc/blog-site" target="_blank">Source Code</a> available for review.</noscript>
+    <img src="https://about.hydraulisc.net/assets/icons/footer-badge.png" alt="Powered By Badge" style="max-height: 26px; height: auto; width: fit-content; cursor: pointer; margin: 2rem 0;">
 </body>
 </html>
