Update font and noscript message, tweak animation
Added Freeroad font to body and set h1/h3 to default font. Updated noscript message to indicate 90% JavaScript reliance. Changed #title animation to run once instead of twice. Added a site layout refactor TODO comment.

Got roasted by Copilot, who created this commit message.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div id="entries"></div>
     <br>
     <div id="buttons"></div>
-    <noscript>If you are reading this, please enable JavaScript. This site works 100% on JavaScript. <a href="https://github.com/Hydraulisc/blog-site" target="_blank">Source Code</a> available for review.</noscript>
+    <noscript>If you are reading this, please enable JavaScript. This site works 90% on JavaScript. <a href="https://github.com/Hydraulisc/blog-site" target="_blank">Source Code</a> available for review.</noscript>
     <img src="https://about.hydraulisc.net/assets/icons/footer-badge.png" alt="Powered By Badge" style="max-height: 26px; height: auto; width: fit-content; cursor: pointer; margin: 2rem 0;">
+    <!-- TO-DO: Add dedicated footer; compartmentalize site layout? -- finally change the site dB -->
 </body>
 </html>
