--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: none
     <meta property="og:site_name" content="Developers Digest - Hydraulisc">
     <meta property="og:description" content="Updates from the Hydraulisc Developers Digest">
     <meta property="og:title" content="Blog | Hydraulisc">
-    <title>Hydraulisc Devlopers Digest</title>
+    <title>Hydraulisc Developers Digest</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="background-primary primary-text">
